# qwen-swarm

./: .env  .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  modal_server.py  orchestrator.py  package.json  pyproject.toml  requirements.txt  run_swarm.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
app/: config.py
app/agents/: base_agent.py  conductor_agent.py  executor_agent.py  planner_agent.py  prompt_builder.py  release_assistant_agent.py  repair_agent.py  reviewer_agent.py  worker_agent.py
app/api/: routes.py  server.py
app/auth/: keystore.py
app/benchmark/: benchmark_runner.py  benchmark_scenarios.py  cache_hit_rate.py  latency.py  report_generator.py  throughput.py  token_usage.py
app/cli/: __init__.py  handlers.py  main.py  setup.py  shell.py  tui.py
app/context/: context_manager.py  graph_builder.py  language_registry.py  models.py  repo_cache.py  repo_indexer.py  summarizer.py  symbol_extractor.py  tree_sitter_parser.py  vector_store.py
app/inference/: backend.py  client.py  dashscope_backend.py  (+5 more)
docs/: architecture.md  benchmark_results.json  benchmarking.md  performance_report.md
prompts/: PROMPT_01_FOUNDATION.md  PROMPT_02_CONTEXT_MANAGER.md  PROMPT_03_SWARM_ORCHESTRATOR.md  PROMPT_04_SANDBOX_SELF_HEALING.md  PROMPT_05_PERFORMANCE_AND_BENCHMARKING.md  shared_system_prompt.txt
tests/: test_context.py  test_git_tools.py  test_inference.py  test_language_registry.py  test_memory.py  test_ollama_backend.py  test_orchestration.py  test_sandbox.py
(+52 files in other folders)
